# yamsa

./: .coderabbit.yaml  .editorconfig  .flake8  .gitignore  .impl-144  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  README.md  TODO.md  conftest.py  docker-compose.yml  entrypoint.sh  manage.py  package.json  pyproject.toml  webpack.config.js
.coderabbit/: config.yaml
.github/: dependabot.yml
.github-issues/: issue-260.md  issue-297.md
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md
.github/workflows/: django-tests.yml  quality-assurance.yml
.run/: yamsa_ ALL TESTS.run.xml  yamsa_ DOCKER-COMPOSE.run.xml  yamsa_ MANAGE.PY.run.xml  yamsa_ SERVER.run.xml  yamsa_ all tests (pytest).run.xml  yamsa_ all tests.run.xml  yamsa_ collectstatic.run.xml  yamsa_ compilemessages.run.xml  yamsa_ create_translation_file --lang de.run.xml  yamsa_ docker-compose.run.xml  yamsa_ server.run.xml  yamsa_ teardown db.run.xml  yamsa_ upgrade it all.run.xml  yamsa_ yarn build.run.xml  yamsa_ yarn watch.run.xml
apps/account/: admin.py  constants.py  context_processors.py  forms.py  managers.py  models.py  querysets.py  tests.py  urls.py  views.py
apps/account/forms/: __init__.py  change_password_form.py  edit_user_form.py  guest_create_form.py  guest_send_invitation_form.py  login_form.py  register_form.py  user_forgot_password_form.py  utils.py
apps/account/migrations/: 0001_initial.py  0002_initial.py  0003_user_paypal_me_link.py  0004_remove_user_paypal_me_link_user_paypal_me_username.py  0005_user_wants_to_receive_webpush_notifications.py  0006_user_invitation_email_sent_and_more.py  0007_alter_user_wants_to_receive_webpush_notifications.py  0008_alter_user_managers.py  0009_remove_user_date_joined_remove_user_first_name_and_more.py  0010_user_profile_picture.py  0011_alter_user_rooms.py  0012_userfriendship.py  0013_user_payment_reminder_preferences.py  0013_user_wants_to_receive_payment_reminders_and_more.py  0014_add_room_reminder_preference.py  0014_user_language.py  0015_userfriendship_user_cannot_friend_self.py
apps/account/models/: __init__.py  helpers.py  user.py  user_friendship.py
apps/account/tests/: baker_recipes.py  conftest.py  constants.py  factories.py  test_admin.py  test_models.py  test_utils.py
apps/account/utils/: notification_preferences.py
apps/account/views/: __init__.py  account_root_redirect_view.py  authenticate_guest_user_view.py  guest_authenticate_view.py  guest_create_view.py  guest_send_invitation_email_view.py  login_user_view.py  payment_reminder_unsubscribe_view.py  register_user_view.py  user_change_password_view.py  user_detail_view.py  user_forgot_password_view.py  user_list_for_room_view.py  user_login_view.py  user_logout_view.py  user_profile_picture_delete_view.py  user_profile_view.py  user_register_view.py  user_remove_from_room_view.py  user_set_language_view.py  user_update_view.py
apps/config/: .env.local  asgi.py  custom_webpack_loader.py  settings.py  urls.py  wsgi.py
apps/core/: admin.py  apps.py  context_managers.py  context_processors.py  htmx.py  http_status.py  toast.py  toast_constants.py  urls.py  utils.py  views.py
apps/core/context_managers/: __init__.py  _query_execution_counter.py  measure_time_and_queries_context_manager.py  measure_time_and_queries_decorator.py
apps/core/domain/: __init__.py  random.py
apps/core/event_loop/: messages.py  registry.py  runner.py
apps/core/forms/: push_information.py
apps/core/middleware/: maintenance_middleware.py  session_keep_alive_middleware.py  toast_middleware.py
apps/core/models/: push_information.py
apps/core/services/: __init__.py  compress_picture_service.py
apps/core/templatetags/: core_tags.py  get_attribute.py  pwa_tags.py
apps/core/tests/: setup.py  test_context_managers.py  test_event_loop_runner.py  (+2 more)
apps/currency/: admin.py  apps.py  context_processors.py  models.py
apps/debt/: admin.py  apps.py  forms.py  managers.py  models.py  querysets.py  urls.py  views.py
apps/docs/: 0000-project-plan.md  notes.md
apps/moneyflow/: admin.py  apps.py  managers.py  models.py  querysets.py
apps/news/: admin.py  constants.py  forms.py  models.py  urls.py  views.py
apps/room/: admin.py  constants.py  context_processors.py  dataclasses.py  managers.py  middleware.py  models.py  querysets.py  urls.py  views.py
apps/static/: base.css  customClasses.css  htmxIndicatorRequest.css  manifest.json
apps/templates/: 403.html  404.html  500.html  _nav.html  _side_menu.html  _side_menu_room_list.html  base_content.html
apps/transaction/: admin.py  apps.py  constants.py  dataclasses.py  factories.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
apps/web_push/: admin.py  apps.py  urls.py  utils.py  views.py
apps/webpush/: admin.py  apps.py  dataclasses.py  services.py  urls.py  utils.py  views.py
docs/: development.md  friend-suggestions.md  one-class-per-file.md  prompts.md
docs/ai/: architecture.md  prompts.md  testing.md  workflow.md
render_sh_scripts/: build_for_deployment_on_render.sh
scripts/: apply_fixtures.sh  check_no_relative_imports.py  check_one_class_per_file.py  clear_sessions.sh  remove_all_assignments.py  remove_future_imports.py  run_backend.sh  run_backend_local.sh  run_backend_tests.sh  run_migrations.sh
(+547 files in other folders)
